# tourney-overlay

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GUIDE-INSTALLATION.md  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docker-build.yml  docker-publish.yml
app/: __init__.py  config.py  main.py  models.py  template_env.py
app/routes/: api.py  overlays.py  websocket_routes.py
app/services/: tournament.py  websocket_manager.py
app/templates/: dashboard.html  overlay_casters.html  overlay_notification.html  overlay_recap.html  overlay_score.html  overlay_score_below.html  overview_overlay.html
