[project]
name = "tourney-overlay"
version = "1.1.0"
description = "Tournament overlay system for OBS with Challonge integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
  ...[truncated]
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiofiles>=24.1.0",
]